crates/ruff_linter/src/rules/flake8_unused_arguments/snapshots/ruff_linter__rules__flake8_unused_arguments__tests__ARG001_ARG.py.snap
---
source: crates/ruff_linter/src/rules/flake8_unused_arguments/mod.rs
---
ARG.py:9:7: ARG001 (unused-function-argument) Unused function argument: `self`
   |
 7 | # Unused arguments on functions.
 8 | ###
 9 | def f(self, x):
   |       ^^^^ ARG001 (unused-function-argument)
10 |     print("Hello, world!")
   |

ARG.py:9:13: ARG001 (unused-function-argument) Unused function argument: `x`
   |
 7 | # Unused arguments on functions.
 8 | ###
 9 | def f(self, x):
   |             ^ ARG001 (unused-function-argument)
10 |     print("Hello, world!")
   |

ARG.py:13:7: ARG001 (unused-function-argument) Unused function argument: `cls`
   |
13 | def f(cls, x):
   |       ^^^ ARG001 (unused-function-argument)
14 |     print("Hello, world!")
   |

ARG.py:13:12: ARG001 (unused-function-argument) Unused function argument: `x`
   |
13 | def f(cls, x):
   |            ^ ARG001 (unused-function-argument)
14 |     print("Hello, world!")
   |
