crates/ruff_linter/src/rules/flake8_unused_arguments/snapshots/ruff_linter__rules__flake8_unused_arguments__tests__ARG002_ARG.py.snap
---
source: crates/ruff_linter/src/rules/flake8_unused_arguments/mod.rs
---
ARG.py:37:17: ARG002 (unused-method-argument) Unused method argument: `x`
   |
35 |     # Unused arguments.
36 |     ###
37 |     def f(self, x):
   |                 ^ ARG002 (unused-method-argument)
38 |         print("Hello, world!")
   |

ARG.py:40:20: ARG002 (unused-method-argument) Unused method argument: `x`
   |
38 |         print("Hello, world!")
39 |
40 |     def f(self, /, x):
   |                    ^ ARG002 (unused-method-argument)
41 |         print("Hello, world!")
   |

ARG.py:43:16: ARG002 (unused-method-argument) Unused method argument: `x`
   |
41 |         print("Hello, world!")
42 |
43 |     def f(cls, x):
   |                ^ ARG002 (unused-method-argument)
44 |         print("Hello, world!")
   |

ARG.py:58:17: ARG002 (unused-method-argument) Unused method argument: `x`
   |
56 |         print("Hello, world!")
57 |
58 |     def f(self, x):
   |                 ^ ARG002 (unused-method-argument)
59 |         msg[0] = "..."
60 |         raise NotImplementedError(msg)
   |

ARG.py:62:17: ARG002 (unused-method-argument) Unused method argument: `x`
   |
60 |         raise NotImplementedError(msg)
61 |
62 |     def f(self, x):
   |                 ^ ARG002 (unused-method-argument)
63 |         msg = "..."
64 |         raise NotImplementedError(foo)
   |

ARG.py:66:17: ARG002 (unused-method-argument) Unused method argument: `x`
   |
64 |         raise NotImplementedError(foo)
65 |
66 |     def f(self, x):
   |                 ^ ARG002 (unused-method-argument)
67 |         msg = "..."
68 |         raise NotImplementedError("must use msg")
   |

ARG.py:216:24: ARG002 (unused-method-argument) Unused method argument: `x`
    |
214 |         print("Hello, world!")
215 |
216 |     def __init__(self, x) -> None:
    |                        ^ ARG002 (unused-method-argument)
217 |         print("Hello, world!")
    |
