crates/ruff_linter/src/rules/flake8_unused_arguments/snapshots/ruff_linter__rules__flake8_unused_arguments__tests__ARG004_ARG.py.snap
---
source: crates/ruff_linter/src/rules/flake8_unused_arguments/mod.rs
---
ARG.py:51:11: ARG004 (unused-static-method-argument) Unused static method argument: `cls`
   |
50 |     @staticmethod
51 |     def f(cls, x):
   |           ^^^ ARG004 (unused-static-method-argument)
52 |         print("Hello, world!")
   |

ARG.py:51:16: ARG004 (unused-static-method-argument) Unused static method argument: `x`
   |
50 |     @staticmethod
51 |     def f(cls, x):
   |                ^ ARG004 (unused-static-method-argument)
52 |         print("Hello, world!")
   |

ARG.py:55:11: ARG004 (unused-static-method-argument) Unused static method argument: `x`
   |
54 |     @staticmethod
55 |     def f(x):
   |           ^ ARG004 (unused-static-method-argument)
56 |         print("Hello, world!")
   |

ARG.py:213:22: ARG004 (unused-static-method-argument) Unused static method argument: `x`
    |
211 | ###
212 | class C:
213 |     def __new__(cls, x):
    |                      ^ ARG004 (unused-static-method-argument)
214 |         print("Hello, world!")
    |
