crates/ruff_linter/src/rules/flake8_unused_arguments/snapshots/ruff_linter__rules__flake8_unused_arguments__tests__ARG005_ARG.py.snap
---
source: crates/ruff_linter/src/rules/flake8_unused_arguments/mod.rs
---
ARG.py:28:8: ARG005 (unused-lambda-argument) Unused lambda argument: `x`
   |
26 | # Unused arguments on lambdas.
27 | ###
28 | lambda x: print("Hello, world!")
   |        ^ ARG005 (unused-lambda-argument)
29 |
30 | lambda: print("Hello, world!")
   |
